checked and added all required css rules, fixed white space on left side of navbar/footer

--- a/docs/styles/style_footer.css
+++ b/docs/styles/style_footer.css
@@ -7,6 +7,5 @@ footer{
 
     position: relative;
     bottom: 0;
-    width: 100%;
     font-size: 14px;
 }
